Add SwiftyJSON via CocoaPods,
Add SwiftyJSON via CocoaPods, move images to Assets, and update recipes JSON/models

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
+Pods/
+xcuserdata/
+*.xcuserstate
+*.xcworkspace/xcuserdata/
+*.xcodeproj/xcuserdata/
+.DS_Store
 RecipeBox.xcodeproj/project.xcworkspace/xcuserdata/ghinzu.xcuserdatad/UserInterfaceState.xcuserstate
 RecipeBox.xcodeproj/xcuserdata/ghinzu.xcuserdatad/xcschemes/xcschememanagement.plist
